traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getX==6 && getY==6) {
  ^